personal-portfolio/src/components/ProjectItems.scss
.Item--Main--Image {
 max-width: 100%; 
 border-radius: 10px;
 border-top: 16px solid #630fe4;



//  &:hover {
//    transform: translate(0, -50px);
//    box-shadow: 10px black;
//    transition: .4s ease-in-out;
//  }
}


#Card--Overlay {
  opacity: 0;
  padding: 1em;
  border-radius: 4px;
  display: flex;
  flex-direction: column;
  text-align: center;
  margin: -1000px;
  padding: 1000px;

  &:hover {
    opacity: 0.9;
    transition: 0.2s ease;
    color: white;
    background-Color: #212121;
    backdrop-filter: 'blur(20px)'
  }
}





//------ Modal Buttons ------- >

.Modal--Buttons {
  display: inline-block;

  @media only screen 
    and (device-width : 375px) 
    and (device-height : 667px) 
    and (-webkit-device-pixel-ratio : 2) { 
      display: flex;
    }

    @media only screen 
    and (device-width : 375px) 
    and (device-height : 812px) 
    and (-webkit-device-pixel-ratio : 3) {
      display: flex;
    }

    @media only screen 
    and (device-width : 360px) 
    and (device-height : 640px) 
    and (-webkit-device-pixel-ratio : 3) {
      display: flex;
    }

}

#View--More--Button {
  border-color: #08FDD8;
  padding: 8px 12px;
  border-radius: 4px;
  color: #08FDD8;
  background-color: #424242;
  font-size: 16px;

  &:hover {
    color: black;
    background-color: #08FDD8;
  }

}

.View--Code--Button {
  border-color: #08FDD8;
  padding: 1em 2em;
  border-radius: 4px;
  color: black;
  background-color: #08FDD8;
  font-size: 14px;

  @media only screen 
  and (device-width : 375px) 
  and (device-height : 812px) 
  and (-webkit-device-pixel-ratio : 3) { 
    display: inline-block !important;
  }
}

.Cancel--Preview--Button {
  border-color: red;
  padding: 1em 2em;
  border-radius: 4px;
  color: white;
  background-color: red;
  font-size: 14px;
  margin-left: 2em;

  @media only screen 
    and (device-width : 375px) 
    and (device-height : 812px) 
    and (-webkit-device-pixel-ratio : 3) { 
      display: inline-block !important;
      margin-left: 0;
      margin-top: 1em;
    }
  
  @media screen and (max-width: 750px) {
    margin-left: 1em;
    margin-top: 1em;
  }
}

//-------------Modal Elements Styling ---------------------- >

.Modal--Main--Image {
  max-height: 300px;
}

#Modal--Text {
  text-align: left;
  max-width: 40em;
}

#Modal--Container {
  // margin-left: 5em;
  // margin-right: 5em;
  // display: "inline-block"
}

.Carousel {
  img {
    max-height: 300px;
  }
}

.Tech--Stack {

}

